tests-system/null-value/output
other != null , "Other must not be null", other
      ^^ null-value/bar.rsl:8: issue: expression is always true [vcg-always-true]
bar.MyType SomeThing {
           ^^^^^^^^^ null-value/instances.trlc:4: error: required component other (see bar.rsl:5) is not defined
Processed 1 model, and 1 requirement file and found 1 warning and 1 error
